src/test/ui/parser/extern-crate-unexpected-token.stderr
error: expected one of `crate`, `fn`, or `{`, found `crte`
  --> $DIR/extern-crate-unexpected-token.rs:1:8
   |
LL | extern crte foo;
   |        ^^^^ expected one of `crate`, `fn`, or `{` here

error: aborting due to previous error

